@@ -77,6 +77,7 @@
 55. No longer using discogs - API has changed.
 56. Fix context widget backdrop retrieval from fan-art
 57. Fix/work-around Qt 5.5 issues with QMenu being used in 2 actions.
+58. When looking for covers, also check sub-folders and return first image.
 
 1.5.2
 -----
